# Testing-features

./: Untitled 2.numbers  test.csv
Testing random/: test.py
aws/: to_delete.ipynb
aws/infrastructure/: aws_built.yaml  aws_built.yml  s3_buckets.yaml  s3_buckets_copy.yaml
aws/sales_migration/lambda/: handler.py
aws_cdk/: app.py
aws_cdk/lambda/: done_file_handler.py
aws_cdk/migration_cdk/: aws_cdk_stack.py  done_file_handler.py
aws_cdk/tests/unit/: test_aws_cdk_stack.py
aws_nged/: pyproject.toml
aws_nged/infrastructure/: s3_buckets.yaml
aws_nged/sales_migration/: explore.ipynb  simulate.py
aws_nged/sales_migration/handlers/: done_file_handler.py
